Ver.
--------------------------------
- Feature TMP - Removed Backoffice permission from SocialAppService

Ver. 3.3.2 - 2022-03-04
--------------------------------
- Feature - Properties CanBeVisualized and Format added to Layer class (migration added)(#79)

Ver. 3.3.1 - 2022-03-04
--------------------------------
- Bugfix - Fix CreateTeam function, possibility for organization manager to create child org (#72)
- Bugfix - Added ReadByUser property to TipDto class (#77)

Ver. 3.3.0 - 2022-02-09
--------------------------------
- Bugfix - Fix bug on prop IsPrivate for Report, when a citizen updates it (#76)
- Feature - Importer update, GetLayers with includeMapRequests input param (#75)

Ver. 3.1.0 - 2022-01-31
--------------------------------
- Feature - Importer update, GetLayers with MapRequestCode input param (#75)

Ver. 3.0.0 - 2022-01-31
--------------------------------
- Feature - PersonTips table added, SetTipAsRead API added (migration added)(#74)

Ver. 2.10.0 - 2022-01-28
--------------------------------
- Bugfix - Fix search value in Linq DTFilter (#71)
- Feature - Send message on RabbitMq when a map request is being created, receive message when MapRequest is being updated (#49)

Ver. 2.9.0 -  2022-01-14
--------------------------------
- Feature - Available layers retrieved from Importer component (#68)
- Feature - Application Insights added (settings update)(#9)
- Bugfix - GetMissionById API fix (#69)

Ver. 2.8.1 - 2022-01-10
--------------------------------
- Bugfix - GetFeatureCollection with ContentType and Visibility filters, only public report for citizens (#67)

Ver. 2.8.0 - 2021-12-09
--------------------------------
- Feature - Type prop added to Layer entity (migration added)(#66)

Ver. 2.7.0 - 2021-11-29
--------------------------------
- Bugfix - Report creation procedure fix (#64)
- Feature - GetLayers fixed example updated (#62)
- Feature - Message on Rabbit bus every time a new entity is created (#63)