@@ -84,6 +84,8 @@
     <Compile Include="Migrations\20220131090644_PersonTips_Added.Designer.cs" />
     <Compile Include="Migrations\20220304114128_Layer_Format_CanBeVisualized_Added.cs" />
     <Compile Include="Migrations\20220304114128_Layer_Format_CanBeVisualized_Added.Designer.cs" />
+    <Compile Include="Migrations\20220331101439_Frequency_Layer_Added.cs" />
+    <Compile Include="Migrations\20220331101439_Frequency_Layer_Added.Designer.cs" />
     <Compile Include="Migrations\ErmesDbContextModelSnapshot.cs" />
     <Compile Include="Migrations\Seed\ModelBuilderExtensions.cs" />
   </ItemGroup>
